; ModuleID = '/home/carl/AnghaBench/darwin-xnu/pexpert/gen/extr_device_tree.c_DTFindEntry.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/pexpert/gen/extr_device_tree.c_DTFindEntry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DTInitialized = common dso_local global i32 0, align 4
@kError = common dso_local global i32 0, align 4
@DTRootNode = common dso_local global i64 0, align 8
@startingP = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DTFindEntry(i8* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i32, i32* @DTInitialized, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %3
  %11 = load i32, i32* @kError, align 4
  store i32 %11, i32* %4, align 4
  br label %19

12:                                               ; preds = %3
  %13 = load i64, i64* @DTRootNode, align 8
  %14 = inttoptr i64 %13 to i8*
  store i8* %14, i8** @startingP, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = call i32 @find_entry(i8* %15, i8* %16, i32* %17)
  store i32 %18, i32* %4, align 4
  br label %19

19:                                               ; preds = %12, %10
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i32 @find_entry(i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
